# DeepseekAss

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DeepseekAss.spec  README.md  _test_fix.py  config.py  fix_encoding.py  fix_encoding2.py  fix_encoding3.py  fix_encoding4.py  gui_main.py  main.py  pyproject.toml  requirements.txt  web_main.py  用户手册.md  第5章_第1章.txt
.claude/: settings.local.json
conversations/: 111_20260508_221830.json
core/: __init__.py  agent_tools.py  app_services.py  auth_manager.py  character_book.py  chat_client.py  chat_domain.py  context_assembler.py  conversation_manager.py  initial_novel_settings.py  novel_manager.py  repositories.py  retrieval.py  settings_manager.py  snapshots.py  storage.py  style_evaluation.py  style_profiles.py  style_rerank.py  task_manager.py  token_log_manager.py  workspace.py  world_bible.py  world_bible_diff.py
plans/: layout-demo.html  typescript-migration-plan.md  ui-architecture-reference.md
scripts/: build_exe.ps1  count_lines.py
strategies/: __init__.py  base_strategy.py  code_assistant_strategy.py  continuation_strategy.py  novel_strategy.py  role_play_strategy.py
tests/: test_agent_chapter_generation.py  test_agent_chapter_polish.py  test_agent_extensions.py  test_agent_runtime.py  test_architecture_upgrade.py  test_chapter_forest.py  test_chat_domain.py  test_framework_integration.py  test_initial_novel_settings.py  test_settings_manager_modes.py  test_snapshot_failure_modes.py  test_style_evaluation.py  test_style_profiles.py  test_style_rerank.py  test_supervision.py  (+6 more)
(+73 files in other folders)
