[project]
name = "deepseekass"
version = "0.2.0"
description = "Local desktop assistant for long-form fiction writing and role-play conversations."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "openai>=1.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "python-dotenv>=1.0.0",
  "PyQt6>=6.5.0",
  "PyQt6-WebEngine>=6.5.0",
  "markdown>=3.4.0",
  "python-docx>=1.0.0",
  "cryptography>=42.0.0",
  "langchain>=1.0.0",
  "langgraph>=1.0.0",
  "langchain-openai>=1.0.0",
  "llama-index-core>=0.12.0",
  "llama-index-embeddings-openai>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["users", "build", "dist", ".venv", ".venv-build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.deepseekass.release]
smoke_test = "python -m unittest discover -s tests"
windows_package_command = "powershell -ExecutionPolicy Bypass -File scripts/build_exe.ps1"
